5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1644_2704.log
== SUBMITION (2019-04-16 14:50:42) 
-- CODE:
nota=float(input("nota parcial:"))
bonus=input("alunosrecebera bonus de ? (S/N)")
if (bonus.upper () == "N"):
	elif(bonus.upper() == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.161126
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 4
    elif(bonus.upper() == "S"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:50:58) 
-- CODE:
nota=float(input("nota parcial:"))
bonus=input("alunosrecebera bonus de ? (S/N)")
if (bonus.upper () == "N"):
elif(bonus.upper() == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.148645
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 4
    elif(bonus.upper() == "S"):
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:51:17) 
-- CODE:
nota=float(input("nota parcial:"))
bonus=input("alunosrecebera bonus de ? (S/N)")
if (bonus.upper () == "N"):
	nota = nota

	elif(bonus.upper() == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.144365
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    elif(bonus.upper() == "S"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:51:46) 
-- CODE:
nota=float(input("nota parcial:"))
bonus=input("alunosrecebera bonus de ? (S/N)")
if (bonus.upper () == "N"):
	nota = nota

	elif(bonus.upper () == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.172413
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    elif(bonus.upper () == "S"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:52:08) 
-- CODE:
nota=float(input("nota parcial:"))
bonus=input("alunosrecebera bonus de ? (S/N)")
if ( bonus.upper () == "N"):
	nota = nota

	elif(bonus.upper () == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.199696
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    elif(bonus.upper () == "S"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:53:12) 
-- CODE:
nota=float(input("nota parcial:"))
bonus=input("alunosrecebera bonus de ? (S/N)")
if ( bonus.upper () == "N"):
	nota = nota

	elif(bonus.upper () == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.187499
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    elif(bonus.upper () == "S"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:53:33) 
-- CODE:
nota=float(input("nota parcial: "))
bonus=input("alunosrecebera bonus de ? (S/N)")
if ( bonus.upper () == "N"):
	nota = nota

	elif(bonus.upper () == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.126476
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    elif(bonus.upper () == "S"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:07) 
-- CODE:
nota=float(input("nota parcial: "))
bonus=input("alunosrecebera bonus de ? (S/N)")
if ( bonus.upper () == "N"):
	nota = nota

elif(bonus.upper () == "S"):
		nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.141013
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:

-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:

-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:24) 
-- CODE:
nota=float(input("nota parcial: "))
bonus=input("alunosrecebera bonus de ? (S/N)")
if ( bonus.upper () == "N"):
	nota = nota

elif(bonus.upper () == "S"):
	nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
	print(nota)
-- EXECUTION TIME:
0.178127
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:

-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:

-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:54:31) 
-- CODE:
nota=float(input("nota parcial: "))
bonus=input("alunosrecebera bonus de ? (S/N)")
if ( bonus.upper () == "N"):
	nota = nota

elif(bonus.upper () == "S"):
	nota = nota + ( nota * 0.1 )
else:
	print("entrada invalida")
print(nota)
-- EXECUTION TIME:
0.23899
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
